<resources>
    <string name="app_name">TTSExampleApp</string>
    <string name="app_title">Text To Speech Example App!</string>
    <string name="app_input_text">Text for speech</string>
    <string name="hello">Hello!</string>
    <string name="text_to_speech_button_name">Text To Speech</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="spanish">Spanish</string>
</resources>
